--- a/Nolan H_Kuran S-Game/style.css
+++ b/Nolan H_Kuran S-Game/style.css
@@ -12,7 +12,11 @@ body {
 .background {
     height: 100vh;
     width: 100vw;
-    background-color: skyblue;
+    /* background-color: skyblue; */
+    background-image: url("./jimg.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
+   
 }
 
 .bird {
@@ -30,7 +34,7 @@ body {
     left: 100vw;
     height: 70vh;
     width: 6vw;
-    background-color: green;
+    background-color: burlywood;
 }
 
 .message {
